Fix HTML encoding issues in Homepage.html

--- a/Homepage.html
+++ b/Homepage.html
@@ -176,15 +176,15 @@
     <h2>Why Choose Us?</h2>
     <div class="feature-grid">
       <div class="feature-card">
-        <h3>🚀 Fast Performance</h3>
+        <h3> Fast Performance</h3>
         <p>Optimized infrastructure ensures speed and reliability.</p>
       </div>
       <div class="feature-card">
-        <h3>🔒 Secure Data</h3>
+        <h3> Secure Data</h3>
         <p>Enterprise-grade security for your business data.</p>
       </div>
       <div class="feature-card">
-        <h3>📊 Analytics</h3>
+        <h3> Analytics</h3>
         <p>Real-time insights to make smarter decisions.</p>
       </div>
     </div>
@@ -196,8 +196,9 @@
   </section>
 
   <footer>
-    © 2025 SaaSify. All rights reserved.
+     2025 SaaSify. All rights reserved.
   </footer>
 
 </body>
 </html>
+
